# data-science

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
major_project/: __init__.py  dataset.py  features.py  plots.py
major_project/modeling/: predict.py  train.py
